# TFA-project-583

./: .gitignore  Makefile  README.md  run_all_tests.sh  tbaa_icalls_test.c  test_diff.txt  tmp.out
mehdi_tests/: tbaa_conflict_test.bc  tbaa_conflict_test.c  tbaa_conflict_test.ll  tbaa_conflicting_test_comp.c++  tbaa_global_color_test.c  tbaa_icall_hero.c  tbaa_many_slots.c  tbaa_table.c  tbaa_test.c  tbaa_void_wrapper.c  test1.ll  test2.bc  test2.ll
new_output/: aborttest-bin-aborttest.output  acert-test-bin-test-corpus.output  aesgcmtest-bin-aesgcmtest.output  algorithmid_test-bin-algorithmid_test.output  asn1-test-bin-asn1.output  asn1-test-bin-fuzz_rand.output  asn1-test-bin-test-corpus.output  asn1_decode_test-bin-asn1_decode_test.output  asn1_dsa_internal_test-bin-asn1_dsa_internal_test.output  asn1_encode_test-bin-asn1_encode_test.output  asn1_internal_test-bin-asn1_internal_test.output  asn1_stable_parse_test-bin-asn1_stable_parse_test.output  asn1_string_table_test-bin-asn1_string_table_test.output  asn1_time_test-bin-a_time.output  asn1_time_test-bin-asn1_time_test.output  (+2589 more)
src/: CMakeLists.txt
src/lib/: Analyzer.cc  CMakeLists.txt
src/lib/AliasAnalysis/: AliasAnalysis.h  AliasAnalysisTools.cc  FuncAliasAnalysis.cc  FuncDFAnalysis.cc  ICallAliasAnalysis.cc  ICallDFAnalysis.cc  InstHandler.cc  InterAliasAnalysis.cc
src/lib/CHABuilder/: CHABuilder.cc  CHABuilder.h  CHABuilderTools.cc
src/lib/CallGraph/: CPPHandler.cc  CallGraph.cc  CallGraph.h  CallGraphTools.cc  CheckReturnCompType.cc  DebugInfoHandler.cc  EscapeHandler.cc  FuncAnalysis.cc  InitinGlobal.cc  LayerAnalysis.cc  OneLayerHandler.cc  TestMethod.cc  TypeAnalysis.cc  UnrollLoop.cc
src/lib/TypeBuilder/: TypeBuilder.cc  TypeBuilder.h  TypeBuilderTools.cc
src/lib/configs/: icall-ignore-list-fileloc  icall-ignore-list-linenum  safe-macro-list
src/lib/utils/: Analyzer.h  Common.cc  Common.h  Config.h  DBTools.cc  DBTools.h  TBAATools.cc  TBAATools.h  Tools.cc  Tools.h
(+7843 files in other folders)
